kubernetes/apps/production/jellyfin/jellyfin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: jellyfin
  labels:
    app: jellyfin
  name: jellyfin
spec:
  ports:
  - name: web
    port: 8096
    protocol: TCP
    targetPort: 8096
  selector:
    app: jellyfin
  type: ClusterIP
